@@ -7,6 +7,7 @@ version 0.11.0-pre10:
 	* IRC Plugin can do whois (right click and info)
 	* IRC Plugin got away message support
 	* Gaim blist to WinAIM blt perl script (courtesy Andy Harrison)
+	* Sound on buddy pounce (Thanks Andrew Echols)
 	* Can view all group chats in one tabbed window (same keybindings
 	  as for tabbed normal conversations)
 
